--- a/vpxtool_shared/Cargo.toml
+++ b/vpxtool_shared/Cargo.toml
@@ -18,6 +18,7 @@ figment = { version = "0.10", features = ["toml", "env"] }
 dialoguer = "0.11.0"
 regex = { version = "1.11.1", features = [] }
 walkdir = "2.5.0"
+rayon = "1.10.0"
 
 [dev-dependencies]
 pretty_assertions = "1.4.1"
