ci: switch to dtolnay/rust-toolchain instead of actions-rs/toolchain

--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -54,9 +54,8 @@ jobs:
       - name: Checkout
         uses: actions/checkout@v4
       - name: Install minimal stable with clippy and rustfmt
-        uses: actions-rs/toolchain@v1
+        uses: dtolnay/rust-toolchain@stable
         with:
-          profile: minimal
           toolchain: stable
           components: rustfmt, clippy
           target: ${{ matrix.platform.target }}
