--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -3,6 +3,7 @@ on:
   push:
     branches:
       - main
+  create:
     tags:
       - 'v*'
 permissions:
@@ -54,9 +55,8 @@ jobs:
       - name: Checkout
         uses: actions/checkout@v4
       - name: Install minimal stable with clippy and rustfmt
-        uses: actions-rs/toolchain@v1
+        uses: dtolnay/rust-toolchain@stable
         with:
-          profile: minimal
           toolchain: stable
           components: rustfmt, clippy
           target: ${{ matrix.platform.target }}
