--- a/Cargo.toml
+++ b/Cargo.toml
@@ -48,6 +48,7 @@ log = "0.4.27"
 figment = { version = "0.10", features = ["toml", "env"] }
 walkdir = "2.5.0"
 rayon = "1.10.0"
+xcap = "0.5.0"
 
 [dev-dependencies]
 testdir = "0.9.3"
