--- a/.github/workflows/clippy.yml
+++ b/.github/workflows/clippy.yml
@@ -17,6 +17,10 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v4
+      - name: Linux dependencies
+        run: |
+          sudo apt-get update
+          sudo apt-get install -y libpipewire-0.3-dev
       - uses: actions/cache@v4
         with:
           path: |
