proper capture error handling

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -49,6 +49,7 @@ figment = { version = "0.10", features = ["toml", "env"] }
 walkdir = "2.5.0"
 rayon = "1.10.0"
 xcap = "0.5.0"
+thiserror = "2.0.12"
 
 [dev-dependencies]
 testdir = "0.9.3"
