--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -57,7 +57,7 @@ jobs:
         if: startsWith(runner.os, 'Linux')
         run: |
           sudo apt-get update
-          sudo apt-get install -y libpipewire-0.3-dev
+          sudo apt-get install -y libxcb1 libxrandr2 libdbus-1-3 libpipewire-0.3-dev
       - name: Install minimal stable with clippy and rustfmt
         uses: dtolnay/rust-toolchain@stable
         with:
