--- a/Cargo.toml
+++ b/Cargo.toml
@@ -23,6 +23,8 @@ clap = { version = "4.5.46", features = ["derive", "string"] }
 colored = "3.0.0"
 console = "0.16.0"
 dialoguer = { version = "0.12.0", features = ["fuzzy-select"] }
+# for the theme override
+fuzzy-matcher = "0.3.7"
 git-version = "0.3.9"
 indicatif = "0.18.0"
 jojodiff = "0.1.2"
