--- a/Cargo.toml
+++ b/Cargo.toml
@@ -34,7 +34,7 @@ wild = "2.2.1"
 
 is_executable = "1.0.5"
 regex = { version = "1.11.3", features = [] }
-vpin = { version = "0.18.0" }
+vpin = { version = "0.18.1" }
 
 edit = "0.1.5"
 pinmame-nvram = "0.4.1"
@@ -47,6 +47,7 @@ dirs = "6.0.0"
 toml = "0.9.7"
 serde = { version = "1.0.228", features = ["derive"] }
 log = "0.4.28"
+env_logger = "0.11.5"
 figment = { version = "0.10", features = ["toml", "env"] }
 walkdir = "2.5.0"
 rayon = "1.11.0"
