--- a/Cargo.toml
+++ b/Cargo.toml
@@ -34,7 +34,8 @@ wild = "2.2.1"
 
 is_executable = "1.0.5"
 regex = { version = "1.12.2", features = [] }
-vpin = { version = "0.20.11" }
+vpin = { version = "0.20.14" }
+directb2s = "0.1.1"
 
 edit = "0.1.5"
 pinmame-nvram = "0.4.4"
